--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -18,4 +18,17 @@
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
+<body class="min-h-screen bg-gray-50 flex flex-col">
+    <%- include('components/nav') %>
+
+    <main class="flex-grow">
+        <%- include(`templates/${view}`) %>
+    </main>
+
+    <%- include('components/footer') %>
+    <script src="/js/lib/jquery.min.js"></script>
+    <script src="/js/lib/chart.umd.min.js" type="module"></script>
+    <script src="/js/main.js" type="module"></script>
+</body>
+
 </html>
