--- a/src/views/components/nav.ejs
+++ b/src/views/components/nav.ejs
@@ -31,8 +31,8 @@
                 </form>
             </div>
 
-            <div class="space-x-4" id="navbar-items">
-                <button id="user-button" class="p-2 rounded-full hover:bg-gray-100hover:scale-105">
+            <div id="navbar-items" class="relative space-x-4">
+                <button id="user-button" class="p-2 rounded-full hover:bg-gray-100 hover:scale-105">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
                     </svg>
@@ -40,20 +40,20 @@
                         <path fill-rule="evenodd" d="M7.5 6a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM3.751 20.105a8.25 8.25 0 0 1 16.498 0 .75.75 0 0 1-.437.695A18.683 18.683 0 0 1 12 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 0 1-.437-.695Z" clip-rule="evenodd" />
                     </svg> -->
                 </button>
-                <button id="menu-button" class="relative p-2 rounded-full hover:bg-gray-100 hover:scale-105">
+                <button id="menu-button" class="p-2 rounded-full hover:bg-gray-100 hover:scale-105">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                     </svg>
                 </button>
-                <div id="menu-dropdown" class="hidden absolute z-10 mt-5 rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none">
+                <div id="menu-dropdown" class="hidden absolute mt-5 right-[0.05rem] rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none">
                     <div class="py-1">
-                        <a href="/about" class="flex items-center px-4 py-2 text-sm text-gray-700">
+                        <a href="/about" class="flex items-center px-4 py-2 text-sm text-gray-700 whitespace-nowrap">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-600 mr-2">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
                             </svg>
                             About Us
                         </a>
-                        <button id="theme-mode-toggle" class="flex items-center px-4 py-2 text-sm text-gray-700 cursor-pointer">
+                        <button id="theme-mode-toggle" class="flex items-center px-4 py-2 text-sm text-gray-700 cursor-pointer whitespace-nowrap">
                             <div id="theme-mode-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-600 mr-2">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
