--- a/src/views/components/nav.ejs
+++ b/src/views/components/nav.ejs
@@ -6,7 +6,6 @@
                     TradeTicker
                 </a>
             </div>
-
             <div id="search-section" class="flex-1 flex justify-center max-w-sm">
                 <form action="/search" method="GET" id="search-container">
                     <div id="search-bar" class="flex items-center px-4 py-2 rounded-md border focus:outline-none bg-gray-50">
@@ -30,7 +29,6 @@
                     </div>
                 </form>
             </div>
-
             <div id="navbar-items" class="relative space-x-4">
                 <button id="user-button" class="p-2 rounded-full hover:bg-gray-100 hover:scale-105">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
@@ -101,56 +99,7 @@
         <div class="modal-backdrop fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
         <div class="modal-content relative transform overflow-hidden scale-95 opacity-0 rounded-lg bg-white text-left shadow-xl transition-all duration-300 sm:my-8 w-full max-w-lg sm:max-w-md">
             <div class="bg-white px-6 pb-6 pt-6 sm:p-6">
-                <div class="flex items-center justify-between mb-6">
-                    <h2 id="auth-form-title" class="text-lg font-bold text-gray-900">Welcome Back!</h2>
-                    <button type="button" class="modal-close rounded-md bg-white text-gray-400 hover:text-gray-500 focus:outline-none">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-                <form action="/auth/login" method="POST" class="mt-6" id="login-form">
-                    <div class="mb-4">
-                        <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
-                        <input type="text" id="username" name="username" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="john_doe" />
-                    </div>
-                    <div class="mb-4">
-                        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-                        <input type="password" id="password" name="password" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
-                    </div>
-                    <div class="flex items-center justify-between mt-6">
-                        <button type="submit" class="modal-login w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                            Login
-                        </button>
-                    </div>
-                    <p class="mt-2 text-sm text-center text-gray-600">
-                        No Account?
-                        <a href="#" class="auth-form-toggle text-blue-600 hover:underline">Register Here!</a>
-                    </p>
-                </form>
-                <form action="/auth/register" method="POST" class="mt-6 hidden" id="register-form">
-                    <div class="mb-4">
-                        <label for="register-username" class="block text-sm font-medium text-gray-700">Username</label>
-                        <input type="text" id="register-username" name="username" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="john_doe" />
-                    </div>
-                    <div class="mb-4">
-                        <label for="register-password" class="block text-sm font-medium text-gray-700">Password</label>
-                        <input type="password" id="register-password" name="password" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
-                    </div>
-                    <div class="mb-4">
-                        <label for="register-confirm-password" class="block text-sm font-medium text-gray-700">Confirm Password</label>
-                        <input type="password" id="register-confirm-password" name="confirmedPassword" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
-                    </div>
-                    <div class="flex items-center justify-between mt-6">
-                        <button type="submit" class="modal-register w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                            Register
-                        </button>
-                    </div>
-                    <p class="mt-2 text-sm text-center text-gray-600">
-                        Already Have an Account?
-                        <a href="#" class="auth-form-toggle text-blue-600 hover:underline">Login Here!</a>
-                    </p>
-                </form>
+                <%- include('auth-form', { type: 'login' }) %>
             </div>
         </div>
     </div>
