--- a/src/views/components/nav.ejs
+++ b/src/views/components/nav.ejs
@@ -6,8 +6,8 @@
                     TradeTicker
                 </a>
             </div>
-            <div id="search-section" class="flex-1 flex justify-center max-w-sm">
-                <form action="/search" method="GET" id="search-container">
+            <div id="search-section" class="flex-1 flex justify-center max-w-sm px-4 sm:px-0">
+                <form action="/search" method="GET" id="search-container" class="w-full">
                     <div id="search-bar" class="flex items-center px-4 py-2 rounded-md border focus:outline-none bg-gray-50">
                         <button type="submit" id="search-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-600 hover:text-gray-900">
@@ -29,6 +29,7 @@
                     </div>
                 </form>
             </div>
+
             <div id="navbar-items" class="relative space-x-4">
                 <button id="user-button" class="p-2 rounded-full hover:bg-gray-100 hover:scale-105">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-600">
@@ -70,14 +71,9 @@
     <div class="flex min-h-screen items-start justify-center pt-16 px-4 text-center sm:p-0">
         <div class="modal-backdrop fixed inset-0 bg-gray-500 bg-opacity-75"></div>
         <div class="modal-content relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl my-20 sm:w-full sm:max-w-2xl">
-            <div class="absolute right-0 top-0 pr-4 pt-4">
-                <button type="button" class="modal-close rounded-md bg-white text-gray-400 hover:text-gray-500 focus:outline-none">
-                    <i data-lucide="x" class="h-6 w-6"></i>
-                </button>
-            </div>
             <div class="bg-white px-4 pt-5 pb-4 sm:p-6">
                 <div class="border-b border-gray-200 mb-4">
-                    <nav class="-mb-px flex space-x-8" aria-label="Tabs">
+                    <nav class="-mb-px flex space-x-8">
                         <% ['All', 'Stocks', 'Crypto', 'Forex', 'Indices'].forEach((category, index) => { %>
                         <a href="#" class="search-tab px-3 py-2 font-medium text-sm <%= index === 0 ? 'border-blue-500 text-blue-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300' %> border-b-2 whitespace-nowrap" data-category="<%= category %>">
                             <%= category %>
