Initial Chart Viewer

--- a/src/views/components/nav.ejs
+++ b/src/views/components/nav.ejs
@@ -74,7 +74,7 @@
             <div class="bg-white px-4 pt-5 pb-4 sm:p-6">
                 <div class="border-b border-gray-200 mb-4">
                     <nav class="-mb-px flex space-x-8">
-                        <% ['All', 'Stocks', 'Crypto', 'Forex', 'Indices'].forEach((category, index) => { %>
+                        <% ['All', 'Stocks', 'Crypto'].forEach((category, index) => { %>
                         <a href="#" class="search-tab px-3 py-2 font-medium text-sm <%= index === 0 ? 'border-blue-500 text-blue-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300' %> border-b-2 whitespace-nowrap" data-category="<%= category %>">
                             <%= category %>
                         </a>
