--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -32,6 +32,7 @@
     <% } %>
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/chart.umd.min.js" type="module"></script>
+    <script src="/js/lib/chartjs-adapter-date-fns.min.js" type="module"></script>
     <script src="/js/main.js" type="module"></script>
 </body>
 
