--- a/src/views/components/auth-form.ejs
+++ b/src/views/components/auth-form.ejs
@@ -11,7 +11,7 @@
         <input type="password" id="password" name="password" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
     </div>
     <div class="flex items-center justify-between mt-6">
-        <button type="submit" class="modal-login w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button type="submit" class="h-captcha modal-login w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
             Login
         </button>
     </div>
@@ -34,7 +34,7 @@
         <input type="password" id="register-confirm-password" name="confirmedPassword" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
     </div>
     <div class="flex items-center justify-between mt-6">
-        <button type="submit" class="modal-register w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button type="submit" class="h-captcha modal-register w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
             Register
         </button>
     </div>
