--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -30,6 +30,8 @@
     <% if (typeof footer === 'undefined' || footer) { %>
     <%- include('components/footer') %>
     <% } %>
+
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/chart.umd.min.js" type="module"></script>
     <script src="/js/lib/chartjs-adapter-date-fns.min.js" type="module"></script>
