--- a/src/views/components/auth-form.ejs
+++ b/src/views/components/auth-form.ejs
@@ -1,17 +1,20 @@
-<div class="flex items-center justify-between mb-6">
+<div class="mb-6">
     <h2 id="auth-form-title" class="text-lg font-bold text-gray-900">Welcome Back!</h2>
+    <p id="auth-form-error" class="text-sm text-red-500"></p>
 </div>
 <form action="/auth/login" method="POST" class="mt-6 <%= type === 'login' ? '' : 'hidden' %>" id="login-form">
     <div class="mb-4">
-        <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
-        <input type="text" id="username" name="username" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="john_doe" />
+        <label for="login-username" class="block text-sm font-medium text-gray-700">Username</label>
+        <input type="text" id="login-username" name="username" class="mt-1 w-full p-2 rounded-md shadow-sm focus:outline-none" placeholder="john_doe" />
+        <p id="login-username-error" class="mt-1 text-sm text-red-500"></p>
     </div>
     <div class="mb-4">
-        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-        <input type="password" id="password" name="password" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
+        <label for="login-password" class="block text-sm font-medium text-gray-700">Password</label>
+        <input type="password" id="login-password" name="password" class="mt-1 w-full p-2 rounded-md shadow-sm focus:outline-none" placeholder="••••••••" />
+        <p id="login-password-error" class="mt-1 text-sm text-red-500"></p>
     </div>
     <div class="flex items-center justify-between mt-6">
-        <button type="submit" class="h-captcha modal-login w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button disabled type="submit" class="h-captcha w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
             Login
         </button>
     </div>
@@ -23,18 +26,21 @@
 <form action="/auth/register" method="POST" class="mt-6 <%= type === 'register' ? '' : 'hidden' %>" id="register-form">
     <div class="mb-4">
         <label for="register-username" class="block text-sm font-medium text-gray-700">Username</label>
-        <input type="text" id="register-username" name="username" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="john_doe" />
+        <input type="text" id="register-username" name="username" class="mt-1 w-full p-2 rounded-md shadow-sm focus:outline-none" placeholder="john_doe" />
+        <p id="register-username-error" class="mt-1 text-sm text-red-500"></p>
     </div>
     <div class="mb-4">
         <label for="register-password" class="block text-sm font-medium text-gray-700">Password</label>
-        <input type="password" id="register-password" name="password" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
+        <input type="password" id="register-password" name="password" class="mt-1 w-full p-2 rounded-md shadow-sm focus:outline-none" placeholder="••••••••" />
+        <p id="register-password-error" class="mt-1 text-sm text-red-500"></p>
     </div>
     <div class="mb-4">
         <label for="register-confirm-password" class="block text-sm font-medium text-gray-700">Confirm Password</label>
-        <input type="password" id="register-confirm-password" name="confirmedPassword" class="mt-1 w-full rounded-md border-gray-300 shadow-sm focus:outline-none" placeholder="••••••••" />
+        <input type="password" id="register-confirm-password" name="confirmedPassword" class="mt-1 w-full p-2 rounded-md shadow-sm focus:outline-none" placeholder="••••••••" />
+        <p id="register-confirm-password-error" class="mt-1 text-sm text-red-500"></p>
     </div>
     <div class="flex items-center justify-between mt-6">
-        <button type="submit" class="h-captcha modal-register w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button disabled type="submit" class="h-captcha w-full rounded-md bg-blue-600 py-2 px-4 text-white font-bold hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
             Register
         </button>
     </div>
