Add News Section

--- a/src/views/components/nav.ejs
+++ b/src/views/components/nav.ejs
@@ -1,6 +1,6 @@
-<header class="sticky top-0 z-50 bg-white border-b border-gray-200">
+<header id="navbar" class="sticky top-0 z-50 bg-white transition-all duration-300">
     <div class="max-w-7xl mx-auto">
-        <div id="navbar" class="flex justify-between items-center h-16 px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between items-center h-16 px-4 sm:px-6 lg:px-8">
             <div id="brand-name" class="transition-transform hover:scale-105">
                 <a href="/" class="text-2xl font-bold text-gray-900">
                     TradeTicker
@@ -41,24 +41,6 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                     </svg>
                 </button>
-                <div id="menu-dropdown" class="hidden absolute mt-5 right-[0.05rem] rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none">
-                    <div class="py-1">
-                        <a href="/about" class="flex items-center px-4 py-2 text-sm text-gray-700 whitespace-nowrap">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-600 mr-2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
-                            </svg>
-                            About Us
-                        </a>
-                        <button id="theme-mode-toggle" class="flex items-center px-4 py-2 text-sm text-gray-700 cursor-pointer whitespace-nowrap">
-                            <div id="theme-mode-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-600 mr-2">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
-                                </svg>
-                            </div>
-                            <span id="theme-mode-text">Dark Mode</span>
-                        </button>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
