--- a/src/views/templates/error.ejs
+++ b/src/views/templates/error.ejs
@@ -10,7 +10,7 @@
             <%= long %>!
         </p>
         <div class="mt-6">
-            <a href="/" class="inline-flex items-center gap-3 px-6 py-3 text-lg font-medium text-blue-600 bg-blue-100 border border-blue-600 rounded-md hover:bg-blue-200">
+            <a href="<%= basePath %>/" class="inline-flex items-center gap-3 px-6 py-3 text-lg font-medium text-blue-600 bg-blue-100 border border-blue-600 rounded-md hover:bg-blue-200">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
                 </svg>
