--- a/src/views/templates/about.ejs
+++ b/src/views/templates/about.ejs
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div>
-            <img src="/img/about.jpg" alt="Stock Chart" class="rounded-lg shadow-md w-full h-64 object-cover">
+            <img src="<%= basePath %>/img/about.jpg" alt="Stock Chart" class="rounded-lg shadow-md w-full h-64 object-cover">
         </div>
     </div>
 
@@ -67,7 +67,7 @@
         <p class="text-lg mb-4">
             Join TradeTicker and take control of your trading experience with personalized watchlists and up-to-date market data.
         </p>
-        <a href="/auth" class="inline-block px-6 py-3 bg-white text-blue-500 font-semibold rounded-md hover:bg-gray-100 transition duration-200">
+        <a href="<%= basePath %>/auth" class="inline-block px-6 py-3 bg-white text-blue-500 font-semibold rounded-md hover:bg-gray-100 transition duration-200">
             Get Started
         </a>
     </div>
