--- a/src/views/templates/auth.ejs
+++ b/src/views/templates/auth.ejs
@@ -1,4 +1,4 @@
-<a href="/" class="absolute top-8 left-8 flex items-center text-blue-600 hover:underline">
+<a href="<%= basePath %>/" class="absolute top-8 left-8 flex items-center text-blue-600 hover:underline">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
     </svg>
