--- a/src/views/templates/search.ejs
+++ b/src/views/templates/search.ejs
@@ -22,7 +22,7 @@
         </div>
         <% if (quotes.length > 0) { %>
         <% quotes.forEach(item => { %>
-        <a href="/symbol/<%= item.symbol %>" class="filter-item grid grid-cols-4 gap-4 px-4 py-3 hover:bg-blue-50 border-t border-gray-200 transition duration-200" data-category="<%= item.category %>">
+        <a href="<%= basePath %>/symbol/<%= item.symbol %>" class="filter-item grid grid-cols-4 gap-4 px-4 py-3 hover:bg-blue-50 border-t border-gray-200 transition duration-200" data-category="<%= item.category %>">
             <span class="font-medium text-blue-600"><%= item.symbol %></span>
             <span class="border-l border-gray-300 pl-2"><%= item.longname %></span>
             <span class="font-semibold"><%= item.sector || '--' %></span>
