Fix Trailing / & OpenGraph

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="<%= basePath %>/css/styles.css" />
 
     <meta property="og:title" content="TradeTicker | Samir's Projects" />
-    <meta property="og:description" content="<%= title %> | TradeTicker" />
-    <meta property="og:image" content="<%= basePath %>/img/favicon/android-chrome-192x192.png" />
+    <meta property="og:site_name" content="<%= title %>" />
     <meta property="og:url" content="https://projects.samir.cx/TradeTicker" />
     <meta property="og:type" content="website" />
 
@@ -27,6 +26,7 @@
     <meta name="twitter:image" content="<%= basePath %>/img/favicon/android-chrome-192x192.png" />
 
     <meta name="description" content="<%= title %> | TradeTicker" />
+    <meta name="theme-color" content="#FFFFFF" />
 </head>
 
 <body class="min-h-screen bg-gray-50 flex flex-col">
