--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -22,8 +22,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TradeTicker | Samir's Projects" />
-    <meta name="twitter:description" content="<%= title %> | TradeTicker" />
-    <meta name="twitter:image" content="<%= basePath %>/img/favicon/android-chrome-192x192.png" />
+    <meta name="twitter:description" content="<%= title %>" />
 
     <meta name="description" content="<%= title %> | TradeTicker" />
     <meta name="theme-color" content="#FFFFFF" />
